src/grammar/document/snapshots/yaml_parser__grammar__document__tests__tag_directive-23.snap
---
source: src/grammar/document/tests.rs
expression: "parse(directives, \"%TAG !m! !my-\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: TAG
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 4
      line: 0
      column: 4
- token: separator
  stream: " "
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 5
      line: 0
      column: 5
- token: tag_handle
  stream: "!m!"
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 8
      line: 0
      column: 8
- token: separator
  stream: " "
  span:
    start:
      index: 8
      line: 0
      column: 8
    end:
      index: 9
      line: 0
      column: 9
- token: tag_prefix
  stream: "!my-"
  span:
    start:
      index: 9
      line: 0
      column: 9
    end:
      index: 13
      line: 0
      column: 13
- value:
    version: ~
    tags:
      "!m!": "!my-"

