src/grammar/document/snapshots/yaml_parser__grammar__document__tests__tag_directive-25.snap
---
source: src/grammar/document/tests.rs
expression: "parse(prefix, \"%TAG ! %20\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: TAG
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 4
      line: 0
      column: 4
- token: separator
  stream: " "
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 5
      line: 0
      column: 5
- token: tag_handle
  stream: "!"
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 6
      line: 0
      column: 6
- token: separator
  stream: " "
  span:
    start:
      index: 6
      line: 0
      column: 6
    end:
      index: 7
      line: 0
      column: 7
- token: tag_prefix
  stream: "%20"
  span:
    start:
      index: 7
      line: 0
      column: 7
    end:
      index: 10
      line: 0
      column: 10
- value:
    version: ~
    tags:
      "!": " "

