src/grammar/document/snapshots/yaml_parser__grammar__document__tests__tag_directive-3.snap
---
source: src/grammar/document/tests.rs
expression: "parse(directives, \"%TAG\\n\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: TAG
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 4
      line: 0
      column: 4
- severity: error
  message: "expected whitespace, but reached end of line"
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 5
      line: 1
      column: 0
  stream: "\n"
- token: break
  stream: "\n"
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 5
      line: 1
      column: 0
- value:
    explicit: false
    version: ~
    tags: {}

