src/grammar/document/snapshots/yaml_parser__grammar__document__tests__tag_directive-31.snap
---
source: src/grammar/document/tests.rs
expression: "parse(directives, \"%TAG ! !a%00%9F%92%96b\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: TAG
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 4
      line: 0
      column: 4
- token: separator
  stream: " "
  span:
    start:
      index: 4
      line: 0
      column: 4
    end:
      index: 5
      line: 0
      column: 5
- token: tag_handle
  stream: "!"
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 6
      line: 0
      column: 6
- token: separator
  stream: " "
  span:
    start:
      index: 6
      line: 0
      column: 6
    end:
      index: 7
      line: 0
      column: 7
- token: error
  stream: "!a%00%9F%92%96"
  span:
    start:
      index: 7
      line: 0
      column: 7
    end:
      index: 21
      line: 0
      column: 21
- severity: error
  message: invalid percent escape
  span:
    start:
      index: 9
      line: 0
      column: 9
    end:
      index: 21
      line: 0
      column: 21
  stream: "%00%9F%92%96"
- token: tag_prefix
  stream: b
  span:
    start:
      index: 21
      line: 0
      column: 21
    end:
      index: 22
      line: 0
      column: 22
- value:
    explicit: false
    version: ~
    tags:
      "!": "!ab"

